--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -26,6 +26,18 @@ span.input-group-text{
 
 
 //button
+
+.btn-primary2{
+      background: #4C48FF;
+      padding: 8px 15px;
+      color: white;
+      border-radius: 5px;
+      border: 0;
+}
+.btn-primary2:hover{
+      background: #100cff;
+}
+
 .button-submit{
       background: #4C48FF;
       padding: 8px 15px;
